# rawr

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  toolbox.sh
.cargo/: config.toml
.sqlx/: query-198cb22b1b00628d84960150449e680e8ec0067f27bf3182bf18fee14a6969d4.json  query-2a50584cb575d32b26ce33d57ae1443ea727ed23d85a211d8428f79b6c03b17b.json  query-42716c29ca332cc47b7d0e2f6afa7a1c0cfe52fdd7289bae622dd9b97ba3f8c7.json  query-5181bdacd025c13dd31445288399637a9cd6227d9c328490e619a99d8b6116fb.json  query-8152da50e88c06f22e5dc78a03bc1f6f1268a8843801b4d494ece7658ce9ba58.json  query-8afdf248a66ee47eda9fe0744bcf7fd6d02445e91ba9ad9ac3590a652dadab20.json  query-919eb3c2de9c3c242872b087066967f7c291d0b02014e36b43a0bfbcfe619cb6.json  query-a2abc09a372e8ff9768bd649db06a7edb2164979857ed048183bb9609496a98b.json  query-e6c840af24a2962e8ff41868f892f2fada0f0432982c89dc073252efd482df92.json  query-e99376c371d3e26a731e6d4e0cf539ab7531c83c007dcda07324345fc68671d1.json  query-fd36eb0d9a9d7c7b444e0c51de58017c34a1624fa6abeb707e1bc2c0ea84be74.json
assets/styles/: book.css  paperwhite.css  rmpp.css
crates/asyncutils/: Cargo.toml
crates/asyncutils/src/: inspect.rs  lib.rs  peekable.rs
crates/cache/: Cargo.toml
crates/cache/migrations/: 0001_versions_table.sql  0002_files_table.sql
crates/cache/queries/: content_hash_exists.sql  count_orphan_versions.sql  count_scanned_files.sql  count_versions.sql  count_works.sql  delete_by_content_hash.sql  delete_by_file_hash_across_targets.sql  delete_by_target_file_hash.sql  delete_by_target_path.sql  delete_by_work_id.sql  delete_orphan_versions.sql  file_hash_exists.sql  find_duplicate_content_across_targets.sql  find_duplicate_content_within_targets.sql  find_works_with_multiple_versions.sql  get_by_content_hash.sql  get_by_file_hash.sql  get_by_path_across_targets.sql  get_by_target_file_hash.sql  get_by_target_path.sql  get_by_work_id.sql  list_all_paths_for_target.sql  list_all_work_ids.sql  list_all_work_ids_for_target.sql  list_files_for_target.sql  list_recent_files.sql  list_scanned_targets.sql  list_versions_for_target.sql  target_path_exists.sql  update_target_path.sql  upsert_file.sql  upsert_version.sql
crates/cache/src/: db.rs  error.rs  lib.rs  repo.rs
crates/cache/src/models/: facet.rs  file.rs  join.rs  mod.rs  version.rs
crates/compress/: Cargo.toml
crates/compress/src/: cli.rs  construct.rs  error.rs  futures.rs  lib.rs  ops.rs  peekable.rs  util.rs
crates/compress/src/futures/: mod.rs  ops.rs  peekable.rs
crates/config/: Cargo.toml
crates/config/src/: auto.rs  error.rs  lib.rs  loader.rs  maybe.rs  validation.rs
crates/config/src/models/: fandom.rs  library.rs  mod.rs  target.rs
crates/extract/: Cargo.toml
crates/extract/src/: compare.rs  consts.rs  error.rs  extract.rs  lib.rs  truncate.rs
crates/extract/src/extract/: data.rs  mod.rs  stats.rs
crates/extract/src/models/: author.rs  chapters.rs  fandom.rs  lang.rs  metadata.rs  mod.rs  rating.rs  series.rs  tag.rs  version.rs  warning.rs
crates/extract/tests/: .gitignore
crates/render/: Cargo.toml
crates/render/src/: chrome.rs  error.rs  lib.rs  render.rs  style.rs
crates/render/src/style/: assets.rs  mod.rs  variables.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  file.rs  lib.rs  models.rs  path.rs
crates/storage/src/backend/: html.rs  local.rs  mock.rs  mod.rs  opendal_util.rs  ro.rs  s3.rs
tests/fixtures/: .gitignore  README.md
