[workspace]
resolver = "2"
members = [".", "crates/*"]

[workspace.package]
rust-version = "1.92"
authors = ["Zan Baldwin"]
edition = "2024"
license = "MIT"
version = "0.1.0-beta"

[workspace.dependencies]
async-stream = "^0.3.6"
async-trait = "^0.1"
aws-sdk-s3 = { version = "^1.120", default-features = false }
blake3 = "^1.8"
brotli = "^8.0"
bzip2 = "^0.6.0"
crc32fast = "^1.5"
derive_more = "^2.1"
exn = "^0.3"
facet = "^0.43.0"
facet-json = "^0.43.0"
fast_html2md = "^0.0.58"
flate2 = "^1.1"
futures = "^0.3.30"
regex = "^1.12"
rstest = "^0.26"
scraper = "^0.25.0"
sqlx = "^0.8.6"
thiserror = "^2.0"
time = "^0.3.47"
tokio = "^1.49"
tracing = "^0.1.0"
xz2 = "^0.1.0"
zstd = "^0.13"
