[package]
name = "rawr-cache"
description = "SQLite cache database for rawr library metadata"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display", "error"] }
exn = { workspace = true }
facet = { workspace = true }
facet-json = { workspace = true }
rawr-compress = { path = "../compress" }
rawr-extract = { path = "../extract" }
rawr-storage = { path = "../storage" }
sqlx = { workspace = true, features = [
    "macros",
    "migrate",
    "runtime-tokio-rustls",
    "sqlite",
] }
time = { workspace = true, features = ["formatting", "parsing"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
rstest = { workspace = true }
