[package]
name = "rawr-compress"
description = "Compression and decompression utilities"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = []
brotli = ["dep:brotli", "async-compression?/brotli"]
xz = ["dep:xz2", "async-compression?/xz"]
zstd = ["dep:zstd", "async-compression?/zstd"]
async = [
    "dep:async-compression",
    "dep:futures",
    "async-compression/bzip2",
    "async-compression/gzip",
]
cli = []

[dependencies]
async-compression = { workspace = true, optional = true, features = [
    "futures-io",
] }
brotli = { workspace = true, optional = true }
bzip2 = { workspace = true }
derive_more = { workspace = true, features = ["display", "error"] }
exn = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true, optional = true }
tracing = { workspace = true }
xz2 = { workspace = true, optional = true }
zstd = { workspace = true, optional = true }

[dev-dependencies]
futures = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
