[package]
name = "rawr-extract"
description = "HTML parsing and metadata extraction for AO3 work downloads"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["markdown"]
markdown = ["dep:fast_html2md"]
serde = ["dep:serde"]

[dependencies]
blake3 = { workspace = true }
crc32fast = { workspace = true }
derive_more = { workspace = true, features = ["display", "error"] }
exn = { workspace = true }
fast_html2md = { workspace = true, features = ["rewriter"], optional = true }
html5ever = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
scraper = { workspace = true }
tendril = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
