[package]
name = "rawr-render"
description = "Chrome/Chromium PDF rendering"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
derive_more = { workspace = true, features = ["display", "error"] }
exn = { workspace = true }
rawr-extract = { path = "../extract" }
rust-embed = { workspace = true }
tracing = { workspace = true }
tempfile = { workspace = true }
which = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
