[package]
name = "rawr-storage"
description = "Storage types and utilities for rawr"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["mock", "s3"]
# Feature intended for use in other crates' dev dependencies.
mock = ["opendal/services-memory"]
s3 = ["opendal/services-s3"]

[dependencies]
async-stream = { workspace = true }
# TODO: When `dyn async trait` stabilizes, migrate to native 2024 Edition async traits.
async-trait = { workspace = true }
derive_more = { workspace = true, features = ["display", "error"] }
exn = { workspace = true }
futures = { workspace = true }
opendal = { workspace = true, features = ["services-fs"] }
rawr-compress = { path = "../compress" }
time = { workspace = true, features = ["formatting", "parsing"] }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
tokio = { workspace = true, features = ["macros", "rt"] }
